<resources>
    <string name="app_name">GitHunApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="searchGitHubUser">Search GitHub User</string>
    <string name="searchButtonText">Search</string>
    <string name="follower">Follower</string>
    <string name="following">Following</string>
    <string name="loadingDataErrorMsg">No Data Found</string>
</resources>